--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.38.0",
     "react-inlinesvg": "^3.0.1",
     "react-pro-sidebar": "^1.0.0-alpha.4",
+    "react-select": "^5.6.1",
     "react-tabs": "^5.1.0",
     "rsuite-table": "^5.8.0",
     "swr": "^1.3.0",
