update env and hard coded urls. remove console logs

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-BASE_URL=https://2da9-107-194-134-60.ngrok.io/api
-PDF_BASE_URL=https://2da9-107-194-134-60.ngrok.io
+BASE_URL=https://api.acralending.com/api
+PDF_BASE_URL=https://api.acralending.com
 
-NEXT_PUBLIC_API_URL=https://2da9-107-194-134-60.ngrok.io
+NEXT_PUBLIC_API_URL=https://api.acralending.com
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
