Fix ezform submit url

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-BASE_URL=https://api.acralending.com/api
-PDF_BASE_URL=https://api.acralending.com
+BASE_URL=http://localhost:1337/api
+PDF_BASE_URL=http://localhost:1337
 
-NEXT_PUBLIC_API_URL=https://api.acralending.com
+NEXT_PUBLIC_API_URL=http://localhost:1337
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
