--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3008",
     "lint": "next lint"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.4",
     "next": "12.3.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-data-table-component": "^7.5.3",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.38.0",
     "react-inlinesvg": "^3.0.1",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^7.4.0",
     "react-pro-sidebar": "^1.0.0-alpha.4",
     "react-select": "^5.6.1",
     "react-tabs": "^5.1.0",
